--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,17 @@
 ---
-import Welcome from "../components/Welcome.astro";
-import Layout from "../layouts/Layout.astro";
+import Layout from "@/layouts/Layout.astro";
+import { getEntry } from "astro:content";
 
+
+// Prerender to cache video api result
+export const prerender = true;
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+const md = await getEntry("pages", "index");
+if (!md) throw new Error("no index page found");
+const { Content } = await md.render();
 ---
 
 <Layout>
-  <Welcome />
+  <Content />
 </Layout>
