--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,8 +1,8 @@
-@tailwind base;
+/* @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-/* @font-face {
+@font-face {
   font-family: "Berkeley Mono Variable";
   font-style: normal;
   font-weight: 100 150;
