--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,6 +2,6 @@
 const today = new Date();
 ---
 
-<footer class="text-center py-6">
+<footer class="text-center py-6 z-50">
   &copy; {today.getFullYear()} Riyan Hossain
 </footer>
