feat: card text

--- a/src/components/ProfileCard.astro
+++ b/src/components/ProfileCard.astro
@@ -21,8 +21,8 @@ import { Icon } from "astro-icon/components";
         loading="eager"
       />
       <div class="space-y-2">
-        <h6 class="text-sm md:text-lg font-semibold">Riyan Hossain</h6>
-        <p class="text-xs md:text-sm text-gray-500">Software Engineer</p>
+        <h6 class="text-base md:text-lg font-semibold">Riyan Hossain</h6>
+        <p class="text-sm text-gray-500">Software Engineer</p>
       </div>
     </div>
 
@@ -43,7 +43,7 @@ import { Icon } from "astro-icon/components";
       }
     </div>
   </div>
-  <p class="text-xs xs:text-sm md:text-base">
+  <p class="text-sm md:text-base">
     👋 Hi, I’m a passionate Full Stack Web Developer with expertise in crafting
     dynamic and responsive websites. Let’s collaborate to create websites that
     are not only functional but also visually stunning and lightning-fast. Ready
