--- a/src/components/ProfileCard.astro
+++ b/src/components/ProfileCard.astro
@@ -13,7 +13,7 @@ import { Icon } from "astro-icon/components";
   <div
     class="flex flex-col md:flex-row md:items-center md:justify-between gap-y-4"
   >
-    <div class="flex itxems-center gap-x-4">
+    <div class="flex items-center gap-x-4">
       <Image
         class="size-10 min-w-10 md:size-16 md:min-w-16 rounded-full object-cover border-2 dark:border-gray-300"
         src={Riyan}
