feat: front-end card

--- a/src/components/ProfileCard.astro
+++ b/src/components/ProfileCard.astro
@@ -21,7 +21,7 @@ import { Icon } from "astro-icon/components";
         loading="eager"
       />
       <div class="space-y-2">
-        <h6 class="text-base md:text-lg font-semibold">Riyan Hossain</h6>
+        <h6 class="text-base md:text-lg font-semibold">Riyan H.</h6>
         <p class="text-sm text-gray-500">Software Engineer</p>
       </div>
     </div>
