--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ if (!md) throw new Error("no index page found");
 const { Content } = await render(md);
 ---
 
-<Layout title="Home">
+<Layout title="Riyan Hossain">
   <Main title="Home">
     <Prose>
       <Content />
