--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -7,7 +7,7 @@ const { title } = Astro.props;
 ---
 
 <div>
-  <h2 class="text-2xl text-bold" transition:name="main title">{title}</h2>
+  <h2 class="text-2xl font-bold" transition:name="main title">{title}</h2>
   <div class="h-[24px] w-full"></div>
   <hr />
   <div class="h-[24px] w-full"></div>
