--- a/src/components/ProfileCard.astro
+++ b/src/components/ProfileCard.astro
@@ -8,7 +8,7 @@ import { Icon } from "astro-icon/components";
 ---
 
 <div
-  class="not-prose border-2 rounded-lg p-5 shadow cursor-pointer transition-all inline-block space-y-2 md:space-y-4"
+  class="not-prose bg-white/50 dark:bg-black/50 border-2 rounded-lg p-5 shadow cursor-pointer transition-all inline-block space-y-2 md:space-y-4"
 >
   <div
     class="flex flex-col md:flex-row md:items-center md:justify-between gap-y-4"
