--- a/src/components/TechStack.astro
+++ b/src/components/TechStack.astro
@@ -5,10 +5,10 @@ import { Icon } from "astro-icon/components";
 import { TooltipComp } from "@/components/TooltipComp";
 ---
 
-<section class="grid grid-cols-1 md:grid-cols-2 gap-2">
+<section class="not-prose grid grid-cols-1 sm:grid-cols-2 gap-2">
   {
     TechStacks.map((stack: TechStack) => (
-      <div class="border rounded p-4">
+      <div class="border rounded p-4 bg-white/50 dark:bg-black/50 space-y-4">
         <h3 class="font-medium mt-0">{stack.title}</h3>
         <div class="flex flex-wrap gap-2">
           {stack.skills.map((skill) => (
@@ -16,7 +16,7 @@ import { TooltipComp } from "@/components/TooltipComp";
               <Icon
                 name={skill.icon}
                 title={skill.name}
-                class="!size-5 !min-w-5 md:!size-6 md:!min-w-6"
+                class="!size-6 !min-w-6"
               />
             </TooltipComp>
           ))}
