--- a/src/components/BlogList.astro
+++ b/src/components/BlogList.astro
@@ -1,5 +1,5 @@
 ---
-import { getCollection } from "astro:content";
+import { getCollection, type CollectionEntry } from "astro:content";
 import BlogCard from "@/components/BlogCard.astro";
 
 type Props = {
