--- a/src/components/FormattedDate.astro
+++ b/src/components/FormattedDate.astro
@@ -1,4 +1,5 @@
 ---
+import dayjs from "dayjs";
 type Props = {
   date: Date;
 };
@@ -6,12 +7,6 @@ type Props = {
 const { date } = Astro.props;
 ---
 
-<time datetime={date.toISOString()}>
-  {
-    date.toLocaleDateString("en-us", {
-      year: "numeric",
-      month: "short",
-      day: "numeric",
-    })
-  }
+<time>
+  {dayjs(date).format("MMM D, YYYY")}
 </time>
