--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -8,6 +8,9 @@ import { cn } from "@/lib/utils";
 import Navigation from "@/components/Navigation";
 import Background from "@/components/Background";
 
+// Vercel Analytics
+import Analytics from "@vercel/analytics/astro";
+
 // Canonical URL
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 
@@ -59,6 +62,9 @@ const {
   <!-- Canonical URL -->
   <link rel="canonical" href={canonicalURL} />
 
+  <!-- Sitemap -->
+  <link rel="sitemap" href="/sitemap-index.xml" />
+
   <!-- Primary Meta Tags -->
   <title>{title}</title>
   <meta name="title" content={title} />
@@ -78,13 +84,11 @@ const {
   <meta property="twitter:description" content={description} />
   <meta property="twitter:image" content={new URL(image, Astro.url)} />
 
-  <!-- Cloudflare Web Analytics -->
-  <!-- <script
-      is:inline
-      defer
-      src="https://static.cloudflareinsights.com/beacon.min.js"
-      data-cf-beacon='{"token": "84933259d875475985c66180f81b73bf"}'></script> -->
+  <!-- Client Router -->
   <ClientRouter />
+
+  <!-- Vercel Analytics -->
+  <Analytics />
 
   <body
     class={`font-lexend antialiased text-black dark:text-white transition-colors duration-500 bg-white dark:bg-black min-h-screen font-normal  ${cn(
