--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,10 +1,11 @@
 ---
 const today = new Date();
-import { Rss } from "lucide-react";
 ---
 
 <footer class="text-center py-6 z-50">
-  &copy; {today.getFullYear()} Riyan Hossain <a href="/rss.xml">
-    <Rss client:load className="inline-block w-4 h-4 ml-2" /></a
+  &copy; {today.getFullYear()} Riyan Hossain
+  <a href="/rss.xml" class="underline-offset-2 hover:underline"> RSS </a>
+  <a href="/sitemap-index.xml" class="underline-offset-2 hover:underline"
+    >Sitemap</a
   >
 </footer>
