--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,7 +5,7 @@ const today = new Date();
 <footer class="text-center py-6 z-50">
   &copy; {today.getFullYear()} Riyan Hossain
   <a href="/rss.xml" class="underline-offset-2 hover:underline"> RSS </a>
-  <a href="/sitemap-index.xml" class="underline-offset-2 hover:underline"
+  <a href="/sitemap-0.xml" class="underline-offset-2 hover:underline"
     >Sitemap</a
   >
 </footer>
