--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -2,7 +2,7 @@
 import type { GetStaticPaths } from "astro";
 import BlogLayout from "@/layouts/BlogLayout.astro";
 import { getEntry } from "astro:content";
-import { Pages } from "@/pages/blog/blog.config";
+import { Pages } from "@/content/blog/blog.config";
 
 const { slug } = Astro.params;
 
