--- a/src/components/BlogList.astro
+++ b/src/components/BlogList.astro
@@ -1,5 +1,5 @@
 ---
-import { getCollection, type CollectionEntry } from "astro:content";
+import { getCollection } from "astro:content";
 import BlogCard from "@/components/BlogCard.astro";
 
 type Props = {
@@ -12,6 +12,8 @@ const { limit, tag } = Astro.props;
 const blogs = (await getCollection("blog")).sort(
   (a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf(),
 );
+
+console.log(blogs.length);
 
 const filteredBlogs = tag
   ? blogs.filter((blog) => blog.data.tags?.includes(tag))
