--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -1,8 +1,8 @@
 ---
 import type { GetStaticPaths } from "astro";
 import BlogLayout from "@/layouts/BlogLayout.astro";
-import { getEntry } from "astro:content";
-import { Pages } from "@/content/blog/blog.config";
+import { getEntry, render } from "astro:content";
+import { Pages } from "@/content/blog.config";
 
 const { slug } = Astro.params;
 
@@ -16,7 +16,7 @@ if (!blog) {
   return Astro.redirect("/404");
 }
 
-const { Content } = await blog.render();
+const { Content } = await render(blog);
 
 export const getStaticPaths = (() => {
   return Pages;
