--- a/src/pages/blog/[page].astro
+++ b/src/pages/blog/[page].astro
@@ -11,7 +11,7 @@ export const getStaticPaths = (async ({ paginate }) => {
       page: page.params.slug,
     })),
   ];
-  return paginate(pages, { pageSize: 1 });
+  return paginate(pages);
 }) satisfies GetStaticPaths;
 
 const { page } = Astro.props;
