--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -7,7 +7,12 @@ import { SITE_TITLE } from "@/constants";
 <Layout title={`Page Not Found | ${SITE_TITLE}`}>
   <Main title="404 - Page Not Found">
     <a href="/">
-      <p class="underline md:no-underline md:hover:underline" transition:name="Go Home">Go Home</p>
+      <p
+        class="underline md:no-underline md:hover:underline"
+        transition:name="Go Home"
+      >
+        Go Home
+      </p>
     </a>
   </Main>
 </Layout>
