--- a/src/pages/blog/tags/[...slug].astro
+++ b/src/pages/blog/tags/[...slug].astro
@@ -22,7 +22,9 @@ export const getStaticPaths = (() => {
 <Layout title={`Tag: ${slug}`}>
   <h2 class="text-2xl font-bold" transition:name="main title">Blog - {slug}</h2>
   <div class="h-2 w-full"></div>
-  <a href="/blog/tags">See all tags</a>
+  <a href="/blog/tags" class="hover:underline underline-offset-2"
+    >See all tags</a
+  >
   <div class="h-[24px] w-full"></div>
   <hr />
   <div class="h-[24px] w-full"></div>
