--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,7 +2,9 @@
 const today = new Date();
 ---
 
-<footer class="py-6 z-50 max-w-2xl w-full mx-auto px-5 lg:px-6">
+<footer
+  class="py-6 z-50 max-w-2xl w-full mx-auto px-5 lg:px-6 text-xs sm:text-bsae"
+>
   <hr />
   <div class="h-6"></div>
   <div class="flex items-center justify-between">
