update: gitiqnore for vercel

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,8 @@ import { getEntry, render } from "astro:content";
 import Main from "@/components/Main.astro";
 import Prose from "@/components/Prose.astro";
 
+export const prerender = true;
+
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 const md = await getEntry("pages", "index");
