--- a/src/pages/500.astro
+++ b/src/pages/500.astro
@@ -2,6 +2,8 @@
 import Main from "@/components/Main.astro";
 import Layout from "@/layouts/Layout.astro";
 
+export const prerender = true;
+
 interface Props {
   error: unknown;
 }
