--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -4,6 +4,8 @@ import BlogLayout from "@/layouts/BlogLayout.astro";
 import { getEntry, render } from "astro:content";
 // import { Pages } from "@/content/blog.config";
 
+export const prerender = true;
+
 const { slug } = Astro.params;
 
 if (!slug) {
