--- a/src/pages/blog/tags/[...slug].astro
+++ b/src/pages/blog/tags/[...slug].astro
@@ -4,6 +4,8 @@
 import Layout from "@/layouts/Layout.astro";
 import BlogList from "@/components/BlogList.astro";
 
+export const prerender = false;
+
 const { slug } = Astro.params;
 
 if (!slug) {
