--- a/src/pages/blog/[page].astro
+++ b/src/pages/blog/[page].astro
@@ -5,7 +5,7 @@ import type { GetStaticPaths } from "astro";
 import { getCollection } from "astro:content";
 import { getEntry } from "astro:content";
 
-export const prerender = false;
+export const prerender = true;
 
 export const getStaticPaths = (async ({ paginate }) => {
   const pages = await getCollection("blog");
